--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "input-otp": "^1.4.2",
     "lenis": "^1.3.17",
     "lucide-react": "^0.525.0",
+    "motion": "^12.34.1",
     "next": "^16.1.1",
     "next-auth": "^4.24.11",
     "next-intl": "^4.3.4",
@@ -73,7 +74,7 @@
     "recharts": "^2.15.4",
     "sharp": "^0.34.3",
     "sonner": "^2.0.6",
-    "tailwind-merge": "^3.3.1",
+    "tailwind-merge": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
